--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.34.3",
+    "@react-three/drei": "^9.49.0",
     "@react-three/fiber": "^8.8.9",
+    "gsap": "^3.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.145.0"
