--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "three": "^0.145.0"
   },
   "devDependencies": {
